--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 asn1crypto==1.5.1
 certifi==2023.5.7
-charset-normalizer==3.1.0
+charset-normalizer==3.0.1
 et-xmlfile==1.1.0
 idna==3.4
-numpy==1.25.0
+numpy
 openpyxl==3.1.2
-pandas==2.0.3
-pg8000==1.29.8
+pandas
+pg8000
 pipreq==0.4
 psycopg2-binary==2.9.6
 pyTelegramBotAPI==4.12.0
 python-dateutil==2.8.2
 pytz==2023.3
-requests==2.31.0
-scramp==1.4.4
+requests
+scramp==1.4.1
 six==1.16.0
 telebot==0.0.5
 tzdata==2023.3
-urllib3==2.0.3
-datetime~=5.2
+urllib3
+datetime
 
 
-openai~=1.3.5
+openai
 g4f~=0.1.9.0
