--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ openpyxl==3.1.2
 pandas
 pg8000
 pipreq==0.4
-psycopg2-binary==2.9.6
+psycopg2-binary
 pyTelegramBotAPI==4.12.0
 python-dateutil==2.8.2
 pytz==2023.3
