--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
   db:
     container_name: db
     image: postgres
+    # image: postgres:15
     restart: always
     environment:
       POSTGRES_DB: postgres
