--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
 
   db:
     container_name: db
-    image: postgres
-    # image: postgres:15
+    # image: postgres
+    image: postgres:15
     restart: always
     environment:
       POSTGRES_DB: postgres
